# cs534

./: .gitignore  copySourceToLinux.ps1  cs534.sln
finalReport/: document.bib  main.tex  main.tex.C10548  main.tex.K10548  ref.bib
project1/: Assignment2.py  BagOfWords.py  project1.py  project1.pyproj
project2/: .gitignore  Assigment2.py  project2.pyproj
project2/writeup/: writeup2.tex
project3/: CMakeLists.txt  main.cpp  project3.vcxproj  project3.vcxproj.filters
project3/Common/: ArrayView.h  BitIterator.cpp  BitIterator.h  BitVector.cpp  BitVector.h  ByteStream.cpp  ByteStream.h  Defines.cpp  Defines.h  Exceptions.h  MatrixView.h  PRNG.cpp  PRNG.h  Timer.cpp  Timer.h
project3/Crypto/: PRNG.h
project3/MLTree/: BoostedMLTree.cpp  BoostedMLTree.h  DiffPrivMedian.cpp  DiffPrivMedian.h  DiffPrivQueryOracle.cpp  DiffPrivQueryOracle.h  Laplace.cpp  Laplace.h  MLTree.cpp  MLTree.h  MLTreeMain.cpp  MLTreeMain.h  PlainQueryOracle.cpp  PlainQueryOracle.h  QueryOracle.cpp  QueryOracle.h  RandomForest.cpp  RandomForest.h  TreeNode.cpp  TreeNode.h  iris.data
project3/Util/: ParsingTags.h
project3/writeup/: hw3_cs534.tex  report.csv
project4/: HW4.m  KMeans.m
project4/writeup/: report.tex
proposal/: proposal.bib  proposal.tex
